# intro-redes-neuronales

./: create_dataset.py  main.py  pyproject.toml
